css/style.css
:root {
  --app-primary-color: #1a2d6d;
  --app-secondary-color: #f08261;
  --app-light-color: #f9f9f9;
  --app-white-color: #ffffff;
  --app-mosgreen-color: #8b8b02;
}

/* Apply scroll snapping */
body {
  scroll-snap-type: y mandatory;
  overflow-y: scroll;
  margin: 0;
  padding: 0;
  user-select: none;
  font-size: 1rem;
  font-family: "Poppins", sans-serif; /* or use any bold, condensed font available */
  min-height: 100%;
  background-color: var(--app-light-color);
  color: var(--app-primary-color); /* setting text to primary */
}

.app-white-text-color {
  color: var(--app-white-color) !important;
}

.app-mosgreen-text-color {
  color: var(--app-mosgreen-color) !important;
}

.app-primary-text-color {
  color: var(--app-primary-color) !important;
}

.app-secondary-text-color {
  color: var(--app-secondary-color) !important;
}

.bg-app-primary {
  background-color: var(--app-primary-color) !important;
}

.bg-app-secondary {
  background-color: var(--app-secondary-color) !important;
}

.nav-bar-background {
  background-color: var(--app-primary-color);
  border-bottom: 5px solid var(--app-secondary-color);
}

.fs-small {
  font-size: 0.9rem;
}

/* General styling for the navbar links when scrolled */
.nav-menu-link-white li a {
  color: var(--app-white-color) !important; /* Set all links to white */
}

/* Style the active nav link specifically */
.nav-menu-link-white li a.active-nav {
  color: var(
    --app-secondary-color
  ) !important; /* Set the active link to the secondary color */
}

/* Optional: Smooth transition for color change */
.nav-link,
.nav-menu-link-white li a.active-nav {
  transition: color 0.3s ease;
}

.active-nav {
  color: var(--app-secondary-color) !important;
}

footer p,
footer h5 {
  color: white;
}

.phone-icon {
  display: inline-block;
  animation: bottomShake 2s infinite;
  transform-origin: top center; /* Fixes the top, moves only the bottom */
}

/* Keyframes for bottom shake effect */
@keyframes bottomShake {
  0%,
  100% {
    transform: scale(1) rotate(0deg);
  }
  25% {
    transform: scale(1.3) rotate(-5deg);
  }
  50% {
    transform: scale(1.3) rotate(5deg);
  }
  75% {
    transform: scale(1.3) rotate(-5deg);
  }
}

.video-section {
  height: 100vh;
}

#bg-video {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  z-index: -1;
  height: 100vh;
  width: 100%;
}

.fallback-main-image {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  z-index: -1;
  height: 100vh;
  background-size: cover;
  width: 100%;
}

#service .card-title {
  color: var(--app-primary-color) !important;
  font-weight: bold;
  margin-bottom: 8px !important;
}

#service .card-text {
  color: var(--app-mosgreen-color) !important;
  /* font-weight: bold; */
  font-size: 1rem;
}

.pricing-details-container {
  margin-top: 15px;
  min-height: 200px;
}

.small-text {
  font-size: 1rem !important;
}

.extra-small-text {
  font-size: 0.9rem !important;
}

.price-label {
  display: inline-block;
  max-width: 115px;
  width: 100%;
}

.price-colon {
  margin-left: auto;
}

/*  to align label and price - colon center */
.pricing-details li {
  display: flex;

  strong {
    display: flex;
    margin-right: 8px;
  }
}

.pricing-heading {
  margin-bottom: 8px;
}

/* Phone Number and Car Icon Styling */
.phone-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  align-items: center;
  background: rgba(255, 255, 255, 0.8);
  padding: 10px 20px;
  border-radius: 5px;
  font-weight: bold;
  color: #333;
  font-size: 1.5em;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

/* CSS */
.headline {
  font-size: 4em; /* Large font size */
  color: #f5a623; /* Attractive orange color */
  font-weight: bold; /* Bold text */
  text-align: center; /* Centered text */
  font-family: "Arial", sans-serif; /* Modern, clean font */
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5); /* Slight shadow for depth */
  margin-top: 20px; /* Adjust margin as needed */
}

/* CSS Styling for Row Layout */
.reviews-section {
  background-color: #f9f9f9;
  padding: 40px;
  text-align: center;
  background-image: url("https://preview.colorlib.com/theme/tralive/assets/img/gallery/section_bg1.jpg.webp");
}

.reviews-section h2 {
  font-size: 2em;
  margin-bottom: 20px;
  color: white;
}

.review-author {
  font-weight: bold;
  color: #333;
}

#whatsapp-icon {
  position: fixed;
  height: 100px;
  width: 100px;
  bottom: 0px; /* Distance from the bottom */
  right: 5px; /* Distance from the right */
  z-index: 1000; /* Ensures the icon is on top of other elements */
}

.reviews-container {
  display: flex;
  gap: 20px;
  justify-content: center;
  flex-wrap: wrap; /* Allows wrapping on smaller screens */
}

.review {
  flex: 1 1 300px; /* Sets a minimum width and allows flexibility */
  max-width: 300px; /* Optional: Limits max width of each review */
  padding: 20px;
  border-radius: 10px;
  background-color: #fff;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  text-align: left; /* Aligns text to the left */
  min-height: 310px;
}

.card {
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
}

.user-info {
  display: flex;
  align-items: center; /* Aligns icon and name vertically */
  margin-bottom: 10px; /* Space below user info */
}

.user-icon {
  width: 40px; /* Set the width of user icons */
  height: 40px; /* Set the height of user icons */
  border-radius: 50%; /* Makes the icon circular */
  margin-right: 10px; /* Space between icon and name */
}

.user-name {
  font-weight: bold;
  color: #333; /* Customize the color as needed */
}

.rating {
  font-size: 1.5em;
  color: #ffcc00; /* Gold color for stars */
}

.review-text {
  font-size: 1.1em;
  color: #666;
  margin: 10px 0;
}

.footer-section h2 {
  text-align: center;
}

.footer {
  color: white;
  background-color: #1a2d6d;
  text-align: center;
}

.footer a {
  margin: 0;
  color: white;
}
/* ... */

